# streamlit_hw

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py  temperature_data.csv
src/: data_analysis.py  entities.py  exceptions.py  generate_data.py  utils.py  weather_api.py
