[project]
name = "streamlit-hw"
version = "0.1.0"
description = "Temperature analysis and monitoring for HSE course"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 140
target-version = "py313"
exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
package = false
